# ketzal

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  License  README.md  rustfmt.toml
.cargo/: config.toml
example/users_web/: Cargo.toml
example/users_web/src/: main.rs
example/users_web/src/routes/: web.rs
ketzal/: Cargo.toml
ketzal-http/: Cargo.toml
ketzal-http/src/: lib.rs
ketzal-http/src/config/: server_config.rs
ketzal-http/src/constants/: content_types.rs  cors.rs  headers.rs  limits.rs  mod.rs
ketzal-http/src/protocol/: mod.rs
ketzal-http/src/protocol/h1/: decoder.rs  encoder.rs
ketzal-http/src/request/: form.rs  http_request.rs  input.rs  json.rs  mod.rs  network.rs  request.rs  validate.rs  validated_data.rs
ketzal-http/src/response/: http_response.rs  json.rs  mod.rs  response.rs
ketzal-router/: Cargo.toml
ketzal-router/src/: handler.rs  lib.rs  params.rs  route.rs  route_group.rs  route_node.rs  router.rs
ketzal-router/tests/: mod.rs  router_tests.rs
ketzal-validation/: Cargo.toml
ketzal-validation/src/: errors.rs  lib.rs  traits.rs  validator.rs
ketzal-validation/src/rules/: conditional.rs  mod.rs  registry.rs
ketzal-validation/src/rules/basic/: confirmed.rs  email.rs  in_.rs  max.rs  min.rs  mod.rs  numeric.rs  required.rs  string.rs
ketzal-validation/src/utils/: mod.rs
ketzal-validation/tests/: mod.rs
ketzal-validation/tests/helpers/: json_factory.rs  mod.rs  test_validator.rs
ketzal-validation/tests/registry/: concurrency.rs  custom_rules.rs  default_rules.rs  mod.rs
ketzal-validation/tests/rules/: mod.rs
ketzal-validation/tests/rules/basic/: confirmed.rs  email.rs  max.rs  min.rs  mod.rs  numeric.rs  required.rs  string.rs
ketzal-validation/tests/rules/conditional/: mod.rs  required_if.rs
ketzal-validation/tests/validator/: basic_validation.rs  conditional_validation.rs  custom_rule_integration.rs  mod.rs
ketzal/src/: lib.rs
ketzal/src/config/: bootstrap.rs  mod.rs
ketzal/src/routes/: mod.rs  registry.rs
ketzal/src/server/: connection.rs  http_server.rs  listener.rs  mod.rs  server.rs
src/: lib.rs
src/application/: mod.rs
src/infrastructure/http/: error.rs  method.rs  mod.rs
src/infrastructure/http/middleware/: cors.rs  logging.rs  mod.rs
src/infrastructure/http/request/: mod.rs  multipart.rs  request.rs
src/infrastructure/http/response/: mod.rs  response.rs  sse.rs
src/infrastructure/http/routes/: macros.rs  mod.rs  registry.rs  route_data.rs  routes.rs  trie.rs
src/infrastructure/http/server/: dispatcher.rs  logger.rs  mod.rs  parser.rs  tcp_server.rs  writer.rs
src/kernel/: mod.rs
src/kernel/config/: mod.rs  pharomachrus.rs  server.rs
src/kernel/constants/: headers.rs  multipart.rs  protocol.rs  status_codes.rs  timeouts.rs
src/kernel/container/: mod.rs
src/kernel/error/: mod.rs
src/kernel/pharomachrus/: mod.rs
tests/: basic_tests.rs  form_data_tests.rs  form_request.rs  header_tests.rs  input_tests.rs  json_tests.rs  mod.rs  request.rs  rules_tests.rs  validator_tests.rs
tests/unit/request/: mod.rs
tests/unit/request/form_data/: empty_body_test.rs  invalid_format_test.rs  json_fallback_test.rs  mod.rs  parse_form_data_test.rs  urlencoded_test.rs
tests/unit/request/header/: mod.rs
(+19 files in other folders)
