[package]
name = "ketzal"
description=" ketzal"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
authors = ["Hector3269"]

[lib]
name = "ketzal"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
urlencoding = "2.1"
url = "2.0"
ratatui = "0.30.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"
ctor = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22.1"
sha1 = "0.10"
flate2 = "1.0"
[features]
default = ["web"]
api = []
web = []
docs = ["api"]
full = ["api", "web", "docs"]