[package]
name = "ketzal-router"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
http = "1.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"