[package]
name = "ketzal"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ketzal-http = { version = "0.1.0", path = "../ketzal-http" }
ketzal-router = { version = "0.1.0", path = "../ketzal-router" }
ketzal-validation = { version = "0.1.0", path = "../ketzal-validation" }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
] }
http = "1.0"
ctor = "0.6"
lazy_static = "1.4"

[features]
default = ["web"]
api = []
web = []
